<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity">

    <EditText
        android:id="@+id/editTextTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/input_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:gravity="start|top"
        android:hint="@string/input_description"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/editTextTextTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/spinnerDaysOfWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:entries="@array/week"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

    <RadioGroup
        android:id="@+id/radioGroupPriority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerDaysOfWeek"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/three"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/two"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"/>

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/one"
            android:layout_weight="1"
            android:checked="true"
            android:background="@android:color/holo_green_light"/>
    </RadioGroup>

    <Button
        android:id="@+id/buttonSaveNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_note"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_purple"
        android:onClick="onClickSaveNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupPriority" />
</androidx.constraintlayout.widget.ConstraintLayout>